# vanhuffel

./: CMakeLists.txt  README.md  readme.txt
doc/: bidiag-doc.txt  dtls-doc.txt  estim-doc.txt  nsingv-doc.txt  psvd-doc.txt  ptls-doc.txt  qrql-doc.txt
examples/: CMakeLists.txt  dtls-example.f  dtls-example.in  psvd-example.f  psvd-example.in  ptls-example.f  ptls-example.in
src/: bidiag.f  cancel.f  damin.f  dtls.f  estim.f  housh.f  init.f  nsingv.f  psvd.f  ptls.f  qlstep.f  qrql.f  qrstep.f  restor.f  tr2.f
src/linpack/: dqrdc.f  dsvdc.f
